# simfire

./: .buildinfo  .flake8  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .style.yapf  CITATION.cff  LICENSE  README.md  config.html  config.yml  contributing.html  dev-requirements.txt  game.py  game_rl.py  game_rothermel.py  generate_cfd_wind_layer.py  genindex.html  historical_tester.py  index.html  intro.html  main.py  mix_config.yml  objects.inv  params.py  py-modindex.html  pyproject.toml  requirements.txt  run_game.py  search.html  searchindex.js  setup.py
.github/workflows/: pages.yml  publish.yml  security.yml  static.yml  test-pages.yml  testing.yml
_sources/: contributing.md.txt  index.rst.txt  intro.md.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/simfire/: index.rst.txt
_sources/autoapi/simfire/enums/: index.rst.txt
_sources/autoapi/simfire/game/: index.rst.txt
_sources/autoapi/simfire/sim/: index.rst.txt
_sources/autoapi/simfire/utils/: index.rst.txt
_sources/autoapi/simfire/world/: index.rst.txt
autoapi/: index.html
autoapi/simfire/: index.html
autoapi/simfire/enums/: index.html
autoapi/simfire/game/: index.html
autoapi/simfire/game/game/: index.html
autoapi/simfire/game/image/: index.html
autoapi/simfire/game/managers/: index.html
autoapi/simfire/game/sprites/: index.html
autoapi/simfire/sim/: index.html
autoapi/simfire/sim/simulation/: index.html
autoapi/simfire/utils/: index.html
autoapi/simfire/utils/assets/: index.html
autoapi/simfire/utils/config/: index.html
autoapi/simfire/utils/decorators/: index.html
autoapi/simfire/utils/generate_cfd_wind_layer/: index.html
autoapi/simfire/utils/graph/: index.html
autoapi/simfire/utils/layers/: index.html
autoapi/simfire/utils/log/: index.html
autoapi/simfire/utils/terrain/: index.html
autoapi/simfire/utils/textures/: index.html
autoapi/simfire/utils/units/: index.html
autoapi/simfire/world/: index.html
autoapi/simfire/world/elevation_functions/: index.html
autoapi/simfire/world/fuel_array_functions/: index.html
autoapi/simfire/world/parameters/: index.html
autoapi/simfire/world/presets/: index.html
autoapi/simfire/world/rothermel/: index.html
autoapi/simfire/world/wind_mechanics/: index.html
configs/: build_wind_config.yml  functional_config.yml  historical_config.yml  mix_config.yml  operational_config.yml
docs/source/: conf.py  config.md  contributing.md  index.rst  intro.md
simfire/: __init__.py  enums.py
simfire/game/: __init__.py  game.py  sprites.py
simfire/game/_tests/: __init__.py  test_game.py  test_sprites.py
simfire/game/managers/: __init__.py  fire.py  mitigation.py
simfire/game/managers/_tests/: test_fire.py  (+1 more)
simfire/sim/: __init__.py  simulation.py
simfire/sim/_tests/: test_simulation.py
simfire/utils/: config.py  decorators.py  generate_cfd_wind_layer.py  graph.py  layers.py  log.py  terrain.py  units.py
simfire/utils/_tests/: test_config.py  test_graph.py  test_layers.py  test_log.py  test_terrain.py  test_units.py
simfire/utils/pregenerated_wind_files/: generated_wind_directions.npy  generated_wind_magnitudes.npy
simfire/world/: elevation_functions.py  fuel_array_functions.py  parameters.py  presets.py  rothermel.py
simfire/world/_tests/: test_cfd_wind.py  test_elevation_functions.py  test_rothermel.py  test_wind.py
simfire/world/wind_mechanics/: cfd_wind.py  perlin_wind.py  wind_controller.py
src/: _version.py  config.py  enums.py
src/game/: Game.py  fireline_env.py  game.py  image.py  managers.py  sprites.py  viewer.py  wireframe.py
src/game/_tests/: __init__.py  test_game.py  test_managers.py  test_sprites.py
src/game/managers/: fire.py  mitigation.py
src/rl_env/: fireline_env.py  fireline_gridaction_env.py  game_rl.py  harness.py  harness_utils.py  simulation.py
src/rl_env/_tests/: test_config.py  test_config.yml  test_fireline_env.py  test_harness.py  test_harness_utils.py  test_simulation.py
src/sim/: simulation.py
src/sim/_tests/: test_simulation.py
src/utils/: bp_convert.py  config.py  decorators.py  fuel.py  graph.py  layers.py  log.py  terrain.py  units.py
src/utils/_tests/: test_config.py  test_config.yml  test_graph.py  test_layers.py  test_log.py  test_terrain.py  test_units.py
src/utils/gdal/: bp_slice.py
src/world/: elevation_functions.py  fuel_array_functions.py  parameters.py  presets.py  rothermel.py  terrain.py  topography.py  wind.py
src/world/_tests/: test_cfd_wind.py  test_rothermel.py  test_topography.py  test_wind.py
src/world/wind_mechanics/: cfd_wind.py  perlin_wind.py  wind_controller.py
tests/: historical_test.py  package.py  sim.py
(+43 files in other folders)
